--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: dfmta
 Type: Package
 Title: Phase I/II Adaptive Dose-Finding Design For MTA
-Version: 1.0
-Date: 2014-11-03
+Version: 1.0-1
+Date: 2014-11-05
 Author: Marie-Karelle Riviere and Jacques-Henri Jourdan
 Maintainer: Marie-Karelle Riviere <eldamjh@gmail.com>
 Copyright: All files in src/CppBugs are copyright Whit Armstrong. All
@@ -18,7 +18,7 @@ License: GPL-3
 Depends: R (>= 3.1.0)
 LinkingTo: RcppArmadillo (>= 0.3.910), BH (>= 1.54), RcppProgress (>=
         0.1), Rcpp
-Packaged: 2014-11-04 23:30:49 UTC; jjourdan
+Packaged: 2014-11-05 14:53:43 UTC; jjourdan
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-11-05 01:20:37
+Date/Publication: 2014-11-06 12:22:57
