--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: dfmta
 Type: Package
 Title: Phase I/II Adaptive Dose-Finding Design For MTA
-Version: 1.0-3
-Date: 2014-11-19
+Version: 1.1-0
+Date: 2015-01-07
 Author: Marie-Karelle Riviere and Jacques-Henri Jourdan
 Maintainer: Marie-Karelle Riviere <eldamjh@gmail.com>
 Copyright: All files in src/CppBugs are copyright Whit Armstrong. All
@@ -12,15 +12,12 @@ Copyright: All files in src/CppBugs are copyright Whit Armstrong. All
 Description: Phase I/II adaptive dose-finding design for single-agent
    Molecularly Targeted Agent (MTA), according to the paper "Phase
    I/II Dose-Finding Design for Molecularly Targeted Agent: Plateau
-   Determination using Adaptive Randomization", Statistics in
-   Medicine, 2014.
+   Determination using Adaptive Randomization".
 License: GPL-3
 Depends: R (>= 3.1.0)
 LinkingTo: RcppArmadillo (>= 0.3.910), BH (>= 1.54), RcppProgress (>=
         0.1), Rcpp
-Packaged: 2014-11-19 10:24:40 UTC; jjourdan
+Packaged: 2015-01-07 10:15:16 UTC; jjourdan
 NeedsCompilation: yes
-X-CRAN-Comment: Archived on 2014-11-18 as attempts to use a
-        non-portable mix of C++11 and Fortran.
 Repository: CRAN
-Date/Publication: 2014-11-20 11:03:17
+Date/Publication: 2015-01-12 10:33:06
