--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
 useDynLib(dfmta, .registration = TRUE, .fixes="C_")
-export(mta_sim, print.mta_sim)
-export(mta_next, print.mta_next)
+export(mtaBin_sim, print.mtaBin_sim)
+export(mtaBin_next, print.mtaBin_next)
